// Message2Server
syntax = "proto3";
package protobuf;
import "MessageType.proto";

message NullRequest {}

message IDMsg
{
    int64 player_id = 1;
    int64 team_id = 2;
}
message PlayerMsg
{
    int64 player_id = 1;
    int64 team_id = 2;
    ShipType ship_type = 3;
}


message MoveMsg
{
    int64 player_id = 1;
    double angle = 2;
    int64 time_in_milliseconds = 3;
    int64 team_id = 4;
}


message SendMsg
{
    int64 player_id = 1;
    int64 to_player_id = 2;
    oneof message
    {
        string text_message = 3;
        bytes binary_message = 4;
    }
    int64 team_id = 5;
}

message AttackMsg // 相当于攻击
{
    int64 player_id = 1;
    double angle = 2;
    int64 team_id = 3;
}

message ConstructMsg //修建建筑
{
    int64 player_id = 1;
    ConstructionType construction_type = 2;
    int64 team_id = 3;
}

message RecoverMsg
{
    int64 player_id = 1;
    int64 recover = 2;
    int64 team_id = 3;
}

message InstallMsg
{
    ModuleType module_type = 1;
    int64 player_id = 2;
    int64 team_id = 3;
}
message BuildShipMsg
{
    ShipType ship_type = 1;
    int64 team_id = 2;
    int32 birthpoint_index = 3;
}